[package]
name = "imgtotext"
authors = ["Aaron Kriegman <aaronkplus2@gmail.com>"]
description = "Convert images to text art with sub-character detail."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# panic = 'abort'

[profile.dev]
opt-level = 3

[dependencies]
rusttype = "0.9.2"
image = "0.24.2"
imageproc = "0.23.0"
tap = "1.0.1"
float-ord = "0.3.2"
num = "0.4.0"
conv = "0.3.3"
clap = { version = "3.1.18", features = ["derive"]}
fontconfig = { version = "0.5.0", features = ["dlopen"] }
